# rte_baseline

./: README.md  pyproject.toml
data/: test.jsonl  train.jsonl  val.jsonl
src/: main.py
