[tool.poetry]
name = "rte_baseline"
version = "0.1.0"
description = ""
authors = ["sobamchan <oh.sore.sore.soutarou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lineflow = "^0.6.5"
transformers = "^4.11.3"
pytorch-lightning = "^1.4.9"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
neovim = "^0.3.1"
jedi = "^0.18.0"
isort = "^5.9.3"
black = "^21.9b0"
ipython = "^7.28.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
